--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -224,7 +224,7 @@
 
 /* --primary: #655eb3; camlibdata.com */
 /* --primary: #05369F; sesor.com */
-/* --primary-two: #F3AB1C; sesor.com */
+/* --primary-two: #DE081B; sesor.com */
 /* --primary: #93191e; buddhist.gov.edu */
 /* --primary: #134571; book-cambo */
 
@@ -239,7 +239,7 @@
     --popover-foreground: oklch(0.145 0 0);
     --primary: #05369F;
     --dark-primary: #781216;
-    --primary-two: #f3ab1c;
+    --primary-two: #DE081B;
     --primary-three: #8ab35e;
     --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.97 0 0);
@@ -282,7 +282,7 @@
     --popover-foreground: oklch(0.985 0 0);
     --primary: #fafafa;
     --dark-primary: #fafafa;
-    --primary-two: #f3ab1c;
+    --primary-two: #DE081B;
     --primary-three: #8ab35e;
     --primary-foreground: oklch(0.205 0 0);
     --secondary: oklch(0.269 0 0);
